@@ -1,3 +1,12 @@
+Fri Apr 24 09:39:16 CEST 2009 Guido Günther <agx@sigxcpu.org>
+
+	* AUTHORS: add Matthias Clasen
+
+Fri Apr 24 09:35:59 CEST 2009 Guido Günther <agx@sigxcpu.org>
+
+	* src/krb5-auth-applet.c: Don't show notification before the applet is
+	  embedded in the panel (based on a patch for 0.8 by Matthias Clasen)
+
 Do Apr 23 18:35:32 CEST 2009 Guido Günther <agx@sigxcpu.org>
 
 	* configure.ac: release 0.9
